# ai-agent-skills-candidate-registry

./: .gitignore  README.md
catalog/: callable_skill_catalog_openclow_hermes.md  deferred_candidates.md  expanded_verified_project_pool.md  initial_20_entries.md
platform-runners/deepagents-local-runner/: .env.example  .gitignore  DEEPAGENTS_LOCAL_SMOKE_RESULT.md  README.md  pyproject.toml
platform-runners/deepagents-local-runner/deepagents_local_runner/: __init__.py  config.py  env.py  guardrails.py  reporting.py  run_discovery.py  run_image_relay_sample.py  run_smoke.py  skills.py  smoke_cases.py
platform-runners/deepagents-local-runner/scripts/: run_image_relay_sample.ps1
reports/: department_role_skill_mapping.md  week1_report.md
reports/six_department_candidate_review/: CANDIDATE_CLASSIFICATION.md  COMPONENT_POOL_ADDITIONS.md  L2_OFFICIAL_RESULT.md  L2_TEMPLATE_PREPLAN_RESULT.md  L2_TEST_QUEUE.md  LICENSE_REVIEW_QUEUE.md  LICENSE_REVIEW_RESULT.md  README.md  SOURCE_DOC_EXTRACT.md
schemas/: skill.schema.json
skills/smb-callable-candidate-skills/: AGENCY_AGENTS_ZH_INTAKE_RESULT.md  AGENCY_AGENTS_ZH_LICENSE_REVIEW_RESULT.md  AGENCY_AGENTS_ZH_PACKAGING_PRECHECK_RESULT.md  AGENCY_AGENTS_ZH_PLATFORM_PRECHECK.md  AGENCY_AGENTS_ZH_RESEARCH_TOP60_RESULT.md  COMPONENT_POOL_TO100_ADDITIONS.md  DEEPAGENTS_LOCAL_SMOKE_RESULT.md  DEEPAGENTS_SMOKE_NEXT50_RESULT.md  DEEPAGENTS_SMOKE_QUALITY_SPRINT_01_RESULT.md  EXECUTION_TRACKER.md  (+105 more)
templates/: evaluation_scorecard.md  license_checklist.md  openclow_hermes_skill.md  research_specialist_task_template.md  skill.yaml
(+622 files in other folders)
