[project]
name = "deepagents-local-runner"
version = "0.1.0"
description = "Local DeepAgents smoke runner for the AI.Skills stable and SMB candidate libraries."
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.2",
    "langchain-openai>=1.1.3",
    "pyyaml>=6.0.2",
]

[tool.uv]
package = false
